# zstd-chunked-rs

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
docs/: format.md
examples/: extract.rs  pull.rs
src/: format.rs  lib.rs
