[package]
name = "zstd-chunked"
version = "0.2.0"
authors = ["Allison Karlitskaya <allison.karlitskaya@redhat.com>"]
description = "Read zstd:chunked files"
edition = "2024"
keywords = ["containers", "zstd", "zstd-chunked"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/containers/zstd-chunked-rs"

[dependencies]
anyhow = "1.0.98"
zerocopy = { version = "0.8.25", features = ["derive"] }
zstd = "0.13.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"

[dev-dependencies]
clap = { version = "4.5.39", features = ["derive"] }
futures = "0.3.31"
futures-timer = "3.0.3"
indicatif = { version = "0.17.11", features = ["tokio"] }
oci-client = "0.15.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-util = "0.7.15"

[lints.rust]
missing_docs = "forbid"
unsafe_code = "forbid"
warnings = "deny"
missing_debug_implementations = "deny"

[lints.clippy]
all = "deny"
expect_used = "deny"
nursery = "deny"
panic = "deny"
pedantic = "deny"
unwrap_used = "deny"

[profile.profiling]
inherits = 'release'
strip = false
